--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Omnifood is an AI-powered food subscription service that'll make you eat healthy again, 365 days a year. It's tailored to your personal taste and nutritional needs.">
   <!-- Always include this line of code -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="/img/favicon.png" type="image/x-icon">
+  <link rel="apple-touch-icon" href="/img/apple-touch-icon.png" type="image/x-icon">
+  <link rel="amanifest" href="manifest.webmanifest" >
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -13,7 +17,7 @@
   <link rel="stylesheet" href="css/queries.css">
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-  <title>Omnifood</title>
+  <title>Omnifood &mdash; Never coook again!</title>
 </head>
 <body>
   <header class="header">
@@ -22,11 +26,11 @@
     </a>
     <nav class="main-nav">
       <ul class="main-nav-list">
-        <li><a class="main-nav-link" href="#">How it works</a></li>
-        <li><a class="main-nav-link" href="#">Meals</a></li>
-        <li><a class="main-nav-link" href="#">Testimonials</a></li>
-        <li><a class="main-nav-link" href="#">Pricing</a></li>
-        <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
+        <li><a class="main-nav-link" href="#how">How it works</a></li>
+        <li><a class="main-nav-link" href="#meal">Meals</a></li>
+        <li><a class="main-nav-link" href="#testimonial">Testimonials</a></li>
+        <li><a class="main-nav-link" href="#pricing">Pricing</a></li>
+        <li><a class="main-nav-link nav-cta" href="#cta">Try for free</a></li>
       </ul>
     </nav>
     <buton class="btn-mobile-nav">
@@ -76,7 +80,7 @@
       </div>
     </div>
   </section>
-  <section class="section-how">
+  <section class="section-how" id="how">
     <div class="container">
       <span class="subheading">How it works</span>
       <h2 class="heading-secondary">
@@ -129,7 +133,7 @@
       </div>
     </div>
   </section>
-  <section class="section-meals">
+  <section class="section-meals" id="meal">
     <div class="container center-text">
       <span class="subheading">Meals</span>
       <h2 class="heading-secondary">
@@ -195,7 +199,7 @@
             <a href="#" class="link">See all recipes &rarr;</a>
         </div>
       </section>
-      <section class="section-testimonials grid grid--2-cols">
+      <section class="section-testimonials grid grid--2-cols" id="testimonial">
         <div class="testimonials-container">
           <span class="subheading">testimonial</span>
           <h2 class="heading-secondary">
@@ -282,7 +286,7 @@
           </figure>
         </div>
       </section>
-      <section class="section-pricing">
+      <section class="section-pricing" id="pricing">
         <div class="container">
           <span class="subheading">
             Pricing
@@ -393,7 +397,7 @@
           </div>
           </div>
       </section>
-      <section class="section-cta">
+      <section class="section-cta" id="cta">
         <div class="container">
           <div class="cta">
             <div class="cta-text-box">
@@ -442,7 +446,7 @@
             <li><a class="footer-link" href="#"><ion-icon class="social-icon" name="logo-facebook"></ion-icon></a> </li>
             <li><a class="footer-link" href="#"><ion-icon class="social-icon" name="logo-twitter"></ion-icon></a> </li>
           </ul>
-        <p class="copyright">Copyright &copy 2022 by Codehemaa. All rights reserved.</p>
+        <p class="copyright">Copyright &copy <span class="year">2021</span> by Codehemaa. All rights reserved.</p>
         </div>
         <div class="address-col">
           <p class="footer-heading">Contact Us</p>
@@ -480,5 +484,7 @@
         </nav>
         </div>
       </footer>
+      <script src="/js/script.js"></script>
+      <script defer src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
 </body>
 </html>
