--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
               <p class="cta-text">
                 Healthy, tasty and hassle-free meals are waiting for you. Start eating well today. You can cancel or pause anytime. And the first meal is on us!
               </p>
-              <form class="cta-form">
+              <form class="cta-form" name="sign-up" netlify>
                 <div>
                 <label for="name">Full Name</label>
                 <input type="text" name="name" id="name" placeholder="John Smith" required>
